# spokenlanguageunderstand

./: README.md  build.sh  clean.sh  export_so.sh  get_slu_version.sh  output.sh
classifier/ME/: CMakeLists.txt  feat.conf  log_path.conf  query.txt  run.sh  test.cpp
classifier/ME/inc/: MaxEntClassifier.h  MeErrorCode.h
classifier/ME/src/: MaxEntClassifier.cpp
classifier/clf_base/: CMakeLists.txt  clean.sh
classifier/clf_nn/: CMakeLists.txt  nn_model.conf  onehot_feat.conf  run.sh  test.cpp
classifier/clf_nn/inc/: NNClassifier.h  NNErrorCode.h
classifier/clf_nn/src/: NNClassifier.cpp
classifier/clf_nn/tensorflow/include/google/tensorflow/tensorflow/core/framework/: api_def.pb.h
classifier/clf_nn/tensorflow/include/google/tensorflow/tensorflow/core/protobuf/: config.pb.h  rewriter_config.pb.h  transport_options.pb.h
classifier/intent_inform/: CMakeLists.txt  run.sh  test.cpp
data/conf/: 5d_dict.conf  clf_domain.conf  domain_manage.conf  global_dict.conf  log.conf  log_path.conf  music_dict.conf  nav_dict.conf  nn_model.conf  nn_model_music_intent.conf  onehot_feat.conf  onehot_feat_music_intent.conf  openDomain.conf  phone_dict.conf  play_domain.conf  poem_dict.conf  regex.cfg  resource.conf  story_dict.conf  weather_dict.conf  workflow.conf
feat_extractor/crf_feat/: CMakeLists.txt  clean.sh  query.txt  run.sh  test.cpp  ticket_dict.conf
feat_extractor/feat_base/: CMakeLists.txt
feat_extractor/feat_base/inc/: FeatExtractor.h  Feature.h
feat_extractor/feat_base/src/: FeatExtractor.cpp  Feature.cpp
feat_extractor/me_feat/: CMakeLists.txt  feat.conf  run.sh  test.cpp
feat_extractor/me_feat/inc/: MEFeatExtractor.h  MeFeatErrorCode.h
feat_extractor/me_feat/src/: MEFeatExtractor.cpp
feat_extractor/onehot_feat/: CMakeLists.txt  build.sh  dict.txt  feat.conf  test.cpp
feat_extractor/open_domain_feat/: CMakeLists.txt  openDomain.conf  test.cpp
import_redis_data/: CMakeLists.txt  README  clean.sh  clear_redis  clear_redis.sh  filecmd2pipe.py  gen_redis_cmd.py  import_all.sh  import_file_data.sh  query_redis  query_redis.sh
import_redis_data/cmds/: redis.cmd
import_redis_data/dict/music/: album  artist  language  region  tag  title  title_single
import_redis_data/dict/poem/: album  author  range  sentence  tag  title  title_single
import_redis_data/dict/sound/: animal  instrument  nature
import_redis_data/dict/story/: album  author  character  region  tag  title  title_single
import_redis_data/dict/weather/: loc_area  loc_city  loc_country  loc_poi  loc_province
import_redis_data/procs/: redis.proc
import_redis_data/src/: clear_redis.cc  query_redis.cc
regex_v1.3/: CMakeLists.txt  README
regex_v1.3/example/: CMakeLists.txt  Makefile  build.sh  clean.sh  run.sh
regex_v1.3/example/conf/: log.cfg  regex.cfg
regex_v1.3/example/lex/comm/: time.lex
regex_v1.3/example/lex/control/: control.lex
regex_v1.3/example/lex/music/: deny.lex  inform.lex  reqalts.lex  request.lex
regex_v1.3/example/lex/poem/: deny.lex  inform.lex  reqalts.lex  request.lex
regex_v1.3/example/lex/story/: deny.lex  inform.lex  reqalts.lex  request.lex
regex_v1.3/example/lex/submusic/: deny.lex  inform.lex  reqalts.lex  request.lex
regex_v1.3/example/lex/subpoem/: inform.lex
regex_v1.3/example/lex/substory/: inform.lex  reqalts.lex  request.lex
regex_v1.3/example/lex/subweather/: inform.lex
regex_v1.3/example/lex/test/: inform.lex
regex_v1.3/example/src/: test.cc
regex_v1.3/example/test/: test.output  test.txt
regex_v1.3/inc/: charset.h  domain_lex.h  expression.h  group.h  link.h  nfa.h  nfa_char_union.h  queue.h  queue.hpp  redis_wrapper.h  semantic.h  spregex.h  state.h  utils.h  variable.h
regex_v1.3/src/: charset.cc  domain_lex.cc  expression.cc  group.cc  link.cc  nfa.cc  nfa_char_union.cc  redis_wrapper.cc  semantic.cc  spregex.cc  state.cc  utils.cc  variable.cc
regex_v1.3/third/hiredis/: sds.c  test_redis  test_redis.c  test_redis.cc
slot_filling/CRF/: CMakeLists.txt  clean.sh  music_dict.conf  query.txt  run.sh  test.cpp
slot_filling/CRF/crf/include/: mmap.h
slot_filling/CRF/inc/: CRFWrapper.h  CrfErrorCode.h  SlotTagger.h
slot_filling/CRF/src/: CRFWrapper.cpp  SlotTagger.cpp
slot_filling/ner_base/: CMakeLists.txt
slot_filling/ner_base/inc/: SlotFilling.h  defStruct.h
slot_filling/ner_base/src/: SlotFilling.cpp
slot_filling/open_domain/: CMakeLists.txt  log_path.conf  openDomain.conf  run.sh  test.cpp
slot_filling/open_domain/inc/: OpenDomain.h
slot_filling/open_domain/src/: OpenDomain.cpp
slu_log/inc/: SluLog.h
test/: README
test/src/: evaluate.py  evaluate_v3.py  get_err.py  test.sh  test_v3.sh
test/test_result/: all.err  all.out  regression.err  regression.out
test/test_set/: all.lab  all.txt  music.lab  music.txt  nav.lab  nav.txt  other.lab  other.txt  phone.lab  phone.txt  poem.lab  poem.txt  regex.lab  regex.txt  regression.lab  regression.txt  story.lab  story.txt  weather.lab  weather.txt
third/hobotlog/: g++.sh  log.conf  main.cpp  test  test.cpp  test.h
third/processor/: CMakeLists.txt  run.sh
third/processor/inc/: PreProcessor.h
third/processor/src/: PreProcessor.cpp  test.cpp
third/utils/: CMakeLists.txt  Makefile  clean.sh  query.txt  run.sh  test.cpp
third/utils/inc/: utils.h
third/utils/src/: gtest_util.cpp  utils.cpp
train_model/crf_train/: CMakeLists.txt  clean.sh  music_data.txt  music_dict.conf  run.sh  template  test.cpp
unit_test/: README.md  all_unit_test.sh
unit_test/DomainManage/: DomainManage_UnitTest.cpp  DomainManage_UnitTest.sh  code_coverage_DomainManage_UnitTest.txt
unit_test/SLU/: SLU_UnitTest.cpp  SLU_UnitTest.sh  code_coverage.txt  code_coverage_SLU_UnitTest.txt  workflow2.conf
unit_test/SemanticInfo/: SemanticInfo_UnitTest.cpp  SemanticInfo_UnitTest.sh  (+1 more)
work_flow/: CMakeLists.txt  README.md  clean.sh  export_so.sh  query.txt  run.sh  service_monitor.sh  test.cpp  test1.cpp
work_flow/inc/: DomainManage.h  SLU.h  SemanticInfo.h  SluErrorCode.h  WorkFlow.h
work_flow/src/: DomainManage.cpp  SLU.cpp  SemanticInfo.cpp  WorkFlow.cpp
(+256 files in other folders)
